[package]
name = "dual_venue_mm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
thiserror        = "1"
anyhow           = "1"
async-trait      = "0.1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util     = "0.3"

[dev-dependencies]
tokio-test = "0.4"